# TypeExtractor

./: .gitignore  CMakeLists.txt  Readme.md
src/clang-plugin/: Plugin.cpp
src/executable/: main.cpp
src/shared/: TypeExtractor.cpp  json.h  util.h
src/shared/include/: TypeExtractorAction.h
